# hub-meta-conversion-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260101_0001_initial_schema.py
app/: __init__.py  main.py
app/api/: deps.py  errors.py
app/api/routes/: advertisers.py  conversion_tags.py  integrations.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  session.py
app/integrations/meta/: __init__.py  adapter.py  client.py  mock_adapter.py  real_adapter.py  schemas.py
app/models/: __init__.py  advertiser.py  conversion_tag.py  idempotency.py  oauth_token.py  pixel.py
app/repositories/: __init__.py  advertiser.py  conversion_tag.py  idempotency.py  oauth_token.py  pixel.py
app/schemas/: __init__.py  advertiser.py  conversion_tag.py  pixel.py
app/services/: __init__.py  advertiser_service.py  conversion_tag_service.py  exceptions.py  idempotency.py  oauth_service.py  pixel_sync_service.py
terraform/modules/cloud_run_service/: main.tf  variables.tf
terraform/modules/cloud_sql/: main.tf  outputs.tf  variables.tf
terraform/modules/scheduler_pixel_sync/: main.tf  variables.tf
terraform/modules/secrets/: main.tf  variables.tf
terraform/terragrunt/: terragrunt.hcl
terraform/terragrunt/dev/: env.hcl
tests/: conftest.py
tests/integration/: test_advertisers_api.py  test_conversion_tags_api.py  test_health.py  test_oauth_refresh.py  test_pixel_sync.py
tests/unit/: test_idempotency_hash.py  test_meta_client_retry.py  test_mock_adapter.py  test_security.py
(+4 files in other folders)
